Closed Bug 397601 Opened 18 years ago Closed 18 years ago

DOM storage leaks on performance graph server pages

Categories

(Core :: DOM: Core & HTML, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: sayrer, Assigned: sayrer)

References

()

Details

(Keywords: memory-leak)

Attachments

(2 files)

See the URL for one example. It looks like this is a cycle between nsDOMStorage's hashtable and nsDOMStorageItem.
Keywords: mlk
Attached file leak report
Maybe the cycle could be broken in another way, but this works. I'm not sure how nsDOMStorageItem::mStorage is behaving here.
Assignee: nobody → sayrer
Status: NEW → ASSIGNED
Attachment #282358 - Flags: review?(jst)
Comment on attachment 282358 [details] [diff] [review] participate in cycle collection Neil should review, I can sr...
Attachment #282358 - Flags: review?(jst) → review?(enndeakin)
Attachment #282358 - Flags: superreview?(jst)
Attachment #282358 - Flags: review?(enndeakin)
Attachment #282358 - Flags: review+
Attachment #282358 - Flags: superreview?(jst) → superreview+
Attachment #282358 - Flags: approval1.9?
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: