Bug 397601. DOM storage leaks on performance graph server pages. r=enndeakin, sr=jst, a=sicking